--- a/src/mainstyle.css
+++ b/src/mainstyle.css
@@ -14,7 +14,7 @@ body {
     display: none;
 }
 
-input {
+.addinput {
     border-radius: 3px;
     color: #000;
     width: auto;
@@ -22,6 +22,14 @@ input {
     padding: 5px 5px 5px 5px;
     font-family: "Lato", sans-serif;
     border: 1px solid var(--darkblue);
+}
+
+.inputbutton {
+    margin-bottom: 0px;
+    text-align: center;
+    padding: 0;
+    border: none;
+    background: none;
 }
 
 th,
