--- a/src/loginstyle.css
+++ b/src/loginstyle.css
@@ -83,6 +83,19 @@ input[type=password] {
     user-select: none;
 }
 
+a {
+    margin-top: 10px;
+    color: #00a2e2;
+    font-family: "Courier New";
+    font-size: 13px;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .powertext {
     margin-top: 10px;
     font-family: "Courier New";
